--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,33 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Movie Watch List</title>
+    <title>RailsWatchList</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
+    <link rel="stylesheet" href="https://ga.jspm.io/npm:star-rating.js@4.3.0/dist/star-rating.css">
+    <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet">
   </head>
 
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <div class="container">
-        <%= link_to "My Watch Lists", root_path, class: "navbar-brand" %>
-
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item">
-            <%= link_to "New list", new_list_path, class: "nav-link" %>
-          </li>
-        </ul>
-      </div>
-    </nav>
-
-    <div class="container my-4">
-      <% if notice %>
-        <div class="alert alert-success"><%= notice %></div>
-      <% end %>
-
-      <%= yield %>
-    </div>
+    <%= render 'shared/navbar' %>
+    <%= render 'shared/flashes' %>
+    <%= yield %>
   </body>
 </html>
