--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -1,24 +1,23 @@
-<h1 class="mb-4">My lists</h1>
-
-<div class="row">
-  <% @lists.each do |list| %>
-    <div class="col-md-4 mb-3">
-      <div class="card h-100 shadow-sm">
-        <div class="card-body d-flex flex-column">
-          <h5 class="card-title"><%= list.name %></h5>
-          <p class="card-text text-muted">
-            <%= pluralize(list.bookmarks.count, "movie") %> in this list
-          </p>
-
-          <div class="mt-auto">
-            <%= link_to "View list", list_path(list), class: "btn btn-primary btn-sm" %>
-          </div>
-        </div>
-      </div>
-    </div>
-  <% end %>
+<div class="cover mb-4 d-flex align-items-center justify-content-center">
+  <div class="text-center text-white">
+    <h1>Save any kind of movies</h1>
+    <h3 class="typed-js" data-controller="typed-js"></h3>
+  </div>
 </div>
-
-<hr>
-
-<%= link_to "Create a new list", new_list_path, class: "btn btn-success" %>
+<div class="container py-5">
+  <div class="d-flex align-items-center justify-content-between mb-3">
+    <h3 class="mb-0">My Lists</h3>
+    <%= link_to "Create a movie list", new_list_path, class: "btn btn-flat" %>
+  </div>
+  <div class="row">
+    <% @lists.each do |list| %>
+      <div class="co-12 col-sm-6 col-md-4 mb-3">
+        <%= link_to list_path(list), class:"text-decoration-none" do %>
+          <div class="card-category" data-aos="zoom-in" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= asset_path('list_background.jpg') %>)">
+            <%= list.name %>
+          </div>
+        <% end %>
+      </div>
+    <% end %>
+  </div>
+</div>
